update: Readme & lang.

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -1,7 +1,7 @@
 {
   "hero": {
     "heading": "Erweiterte Tabellen, Multi-Theme-Diagramme und robuste Formulare",
-    "subheading": "Entdecken Sie eine Sammlung von Shadcn UI-Blöcken und -Komponenten. Optimieren Sie Ihren Entwicklungsprozess mit leicht umsetzbaren Beispielen.",
+    "subheading": "Eine funktionsreiche Benutzeroberfläche mit Mehrsprachenunterstützung, erweiterten Tabellen, dynamischen Multi-Theme-Diagrammen und robusten, typsicheren Formularen.",
     "get_started": "Loslegen",
     "github": "GitHub"
   },
