--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,7 +1,7 @@
 {
   "hero": {
     "heading": "Advanced Table, Multi-Theme Charts and Robust Forms",
-    "subheading": "Explore a collection of Shadcn UI blocks and components. Streamline your development workflow with easy-to-implement examples.",
+    "subheading": "A feature-rich UI with  multi-language support, advanced tables, dynamic multi-theme charts, and robust, type-safe forms.",
     "get_started": "Get Started",
     "github": "Github"
   },
