--- a/src/i18n/locales/es.json
+++ b/src/i18n/locales/es.json
@@ -1,7 +1,7 @@
 {
   "hero": {
     "heading": "Tablas avanzadas, gráficos con múltiples temas y formularios robustos",
-    "subheading": "Explora una colección de bloques y componentes Shadcn UI, listos para previsualizar y copiar. Optimiza tu flujo de desarrollo con ejemplos fáciles de implementar.",
+    "subheading": "Una interfaz de usuario rica en funciones con soporte multilingüe, tablas avanzadas, gráficos dinámicos con múltiples temas y formularios robustos y con tipos seguros.",
     "get_started": "Comenzar",
     "github": "Github"
   },
