--- a/src/i18n/locales/fr.json
+++ b/src/i18n/locales/fr.json
@@ -1,7 +1,7 @@
 {
   "hero": {
     "heading": "Tableau avancé, graphiques multi-thèmes et formulaires robustes",
-    "subheading": "Découvrez une collection de blocs et composants Shadcn UI. Simplifiez votre flux de développement avec des exemples faciles à implémenter.",
+    "subheading": "Une interface utilisateur riche en fonctionnalités avec prise en charge multilingue, tableaux avancés, graphiques dynamiques à thèmes multiples et formulaires robustes et typés de manière sûre.",
     "get_started": "Commencer",
     "github": "GitHub"
   },
