--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -1,7 +1,7 @@
 {
   "hero": {
     "heading": "उन्नत तालिका, मल्टी-थीम चार्ट और मजबूत फॉर्म",
-    "subheading": "Shadcn UI ब्लॉक्स और घटकों का एक संग्रह खोजें। आसान उदाहरणों के साथ अपने विकास कार्यप्रवाह को सरल बनाएं।",
+    "subheading": "बहु-भाषा समर्थन, उन्नत तालिकाएँ, गतिशील मल्टी-थीम चार्ट और मज़बूत, प्रकार-सुरक्षित फ़ॉर्म के साथ एक सुविधाओं से भरपूर यूआई।",
     "get_started": "शुरू करें",
     "github": "गिटहब"
   },
