--- a/src/i18n/locales/jp.json
+++ b/src/i18n/locales/jp.json
@@ -1,7 +1,7 @@
 {
   "hero": {
     "heading": "高度なテーブル、多テーマ対応チャート、堅牢なフォーム",
-    "subheading": "Shadcn UI のブロックとコンポーネントのコレクションを探索しましょう。実装が簡単なサンプルで開発ワークフローを効率化できます。",
+    "subheading": "多言語対応、拡張テーブル、動的なマルチテーマチャート、そして堅牢で型安全なフォームを備えた多機能なUI。",
     "get_started": "始める",
     "github": "GitHub"
   },
